feat: added filepond

--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     },
     "dependencies": {
         "@vitejs/plugin-vue": "^4.2.3",
-        "vue": "^3.2.36"
+        "filepond": "^4.30.4",
+        "filepond-plugin-file-validate-type": "^1.2.8",
+        "filepond-plugin-image-preview": "^4.6.11",
+        "vue": "^3.2.36",
+        "vue-filepond": "^7.0.3"
     }
 }
